# homedoc-journal-analyzer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  homedoc_journal_analyzer.py  pyproject.toml
.github/workflows/: ci.yml
